@@ -45,7 +45,7 @@
 # ------------------------------------------------------------------------------
 
 # Useful constants. Some day these will be set from args
-TOOLDIR=/opt/arc-4.8
+TOOLDIR=/opt/arc-${RELEASE}
 # LINUX_DEFCONFIG=4.10_defconfig
 # LINUX_DEFCONFIG=fpga_defconfig_patched_no_sasid
 LINUX_DEFCONFIG=
@@ -58,8 +58,12 @@ ARC_UNPACKED_NAME=arc_initramfs_22_abi-v3-0.9.34
 # Ensure we have the right tool chain on the path!
 PATH=${TOOLDIR}/bin:${PATH}
 
-mkdir -p ${PWD}/../logs-4.8
-logfile="$(echo "${PWD}")/../logs-4.8/kernel-build-$(date -u +%F-%H%M).log"
+# Generic release set up, which we'll share with sub-scripts. This defines
+# (and exports RELEASE, LOGDIR and RESDIR, creating directories named $LOGDIR
+# and $RESDIR if they don't exist.
+. "${ARC_GNU}"/toolchain/define-release.sh
+
+logfile="${LOGDIR}/kernel-build-$(date -u +%F-%H%M).log"
 rm -f "${logfile}"
 
 # Create arc_initramfs. Need to patch the ownership.
